<resources>
    <string name="app_name">MVVM_Simple_Calculator</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="number_1">Number 1</string>
    <string name="number_2">Number 2</string>

    <string name="result">Result</string>

    <string name="operations">OPERATIONS</string>

    <string name="operations_1">+</string>
    <string name="operations_2">-</string>
    <string name="operations_3">*</string>
    <string name="operations_4">/</string>

    <string name="calculate">Calculate</string>

    <string name="calculateAgain">CALCULATE AGAIN</string>

</resources>
