<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".main.FourOperationsFragment">


    <data>

        <variable
            name="fourOperationsViewModel"
            type="com.ardakazanci.mvvm_simple_calculator.main.FourOperationsViewModel" />


    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText

            android:id="@+id/edtNumberOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/number_1"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/edtNumberOne"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/number_2"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editText2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtNumberOne" />

        <EditText
            android:id="@+id/edtNumberSecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto_black"
            android:text="@string/operations"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtNumberSecond" />

        <Button
            android:id="@+id/button"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:onClick="@{() -> fourOperationsViewModel.onAdditionClicked()}"
            android:text="@string/operations_1"
            app:layout_constraintEnd_toStartOf="@+id/button2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/button2"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:onClick="@{() -> fourOperationsViewModel.onSubstractionClicked()}"
            android:text="@string/operations_2"
            app:layout_constraintEnd_toStartOf="@+id/button3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/button3"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:onClick="@{() -> fourOperationsViewModel.onMultiplicationClicked()}"
            android:text="@string/operations_3"
            app:layout_constraintEnd_toStartOf="@+id/button4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button2"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/button4"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:onClick="@{() -> fourOperationsViewModel.onDivisionClicked()}"
            android:text="@string/operations_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/calculate"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>